[gd_scene load_steps=9 format=3 uid="uid://26yj8ejvcjue"]

[ext_resource type="Script" uid="uid://d0ca8anp176ty" path="res://Levels/level_3.gd" id="1_fa81k"]
[ext_resource type="Script" uid="uid://dyfftxaanwsj2" path="res://LinePuzzle/pathsystem.gd" id="2_ck3gp"]
[ext_resource type="PackedScene" uid="uid://ckku0a8b72amn" path="res://LinePuzzle/spawnpoint.tscn" id="3_trpa2"]
[ext_resource type="PackedScene" uid="uid://bpnqsi6o5hlhf" path="res://LinePuzzle/checkpoint.tscn" id="4_4t7ew"]
[ext_resource type="PackedScene" uid="uid://dv5cwnrtxejt3" path="res://win_popup_ui.tscn" id="5_oojpf"]
[ext_resource type="PackedScene" uid="uid://3yppwi2aecmh" path="res://LinePuzzle/Entities/Tree.tscn" id="6_7cdb2"]
[ext_resource type="PackedScene" uid="uid://dg7vw5egeisul" path="res://LinePuzzle/Entities/Cow.tscn" id="7_2urlj"]
[ext_resource type="PackedScene" uid="uid://de8drvsfcoe3b" path="res://UI/UIScene.tscn" id="8_88iqf"]

[node name="Root" type="Node2D"]
script = ExtResource("1_fa81k")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.364706, 0.482353, 1, 1)

[node name="Grid" type="Node2D" parent="."]
script = ExtResource("2_ck3gp")

[node name="PathLines" type="Node" parent="Grid"]

[node name="SpawnPoint" parent="Grid" instance=ExtResource("3_trpa2")]
position = Vector2(616, 134)

[node name="CheckPoint" parent="Grid" instance=ExtResource("4_4t7ew")]
position = Vector2(565, 463)

[node name="WinPopupUI" parent="Grid" instance=ExtResource("5_oojpf")]

[node name="GridBorder" type="Line2D" parent="Grid"]
points = PackedVector2Array(250, 100, 805.6, 100, 805.6, 600, 250, 600, 250, 100)
width = 2.0
default_color = Color(1, 0.5, 0.8, 1)

[node name="Tree" parent="." instance=ExtResource("6_7cdb2")]
position = Vector2(612, 258)

[node name="Cow" parent="." instance=ExtResource("7_2urlj")]
position = Vector2(507, 463)

[node name="UI" parent="." instance=ExtResource("8_88iqf")]
